@@ -2,7 +2,8 @@
 ---
 
 - Add check for bad bit allocation value in layer I decoder (removes audible glitch in bug 201 test file).
-- Avoid irritating error message about Frankenstein streams when gapless decoding disabled (might come back, though, for stream format changes).
+- Avoid wrong error message about Frankenstein streams when gapless decoding disabled.
+- Be verbose about big header changes (Frankenstein streams). Note that changes in samples per frame will confuse the seeking code, but decoding can get through.
 - big version increase for clear distinction regarding the 1.14.x regression fixes
 - ensure decoder reinitialization on combination of seek and resync (buffer overflow bug 201, introduced in 1.14.1)
 - make parsing really end on reaching of junk limit (introduced in 1.14.4)
